# SPDX-FileCopyrightText: 2023 Helge Eichhorn <git@helgeeichhorn.de>
# SPDX-FileCopyrightText: 2024 Angus Morrison <github@angus-morrison.com>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "lox-space"
description = "The Lox toolbox for space mission analysis and design"
version = "0.1.0-alpha.27"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "lox_space"
crate-type = ["lib", "cdylib"]

[dependencies]
lox-test-utils.workspace = true
lox-bodies = { workspace = true, optional = true }
lox-core = { workspace = true, optional = true }
lox-earth = { workspace = true, optional = true }
lox-ephem = { workspace = true, optional = true }
lox-frames = { workspace = true, optional = true }
lox-io = { workspace = true, optional = true }
lox-math = { workspace = true, optional = true }
lox-orbits = { workspace = true, optional = true }
lox-time = { workspace = true, optional = true }
lox-units = { workspace = true, optional = true }

glam = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
sgp4 = { workspace = true, optional = true }

[dev-dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }
rstest.workspace = true

[features]
default = [
    "bodies",
    "earth",
    "ephem",
    "frames",
    "io",
    "math",
    "orbits",
    "time",
    "units",
]
bodies = [
    "math",
    "units",
    "dep:lox-bodies"
]
earth = [
    "bodies",
    "math",
    "io",
    "time",
    "units",
    "dep:lox-earth",
]
ephem = [
    "math",
    "dep:lox-ephem"
]
frames = [
    "bodies",
    "earth",
    "math",
    "time",
    "units",
    "dep:lox-frames"
]
io = [
    "dep:lox-io"
]
math = [
    "dep:lox-math"
]
orbits = [
    "bodies",
    "earth",
    "ephem",
    "frames",
    "math",
    "time",
    "units",
    "dep:lox-orbits"
]
python = [
    "time",
    "units",
    "dep:lox-core",
    "dep:glam",
    "dep:numpy",
    "dep:pyo3",
    "dep:rayon",
    "dep:sgp4",
]
time = [
    "io",
    "math",
    "units",
    "dep:lox-time",
]
units = [
    "dep:lox-units",
]
