# SPDX-FileCopyrightText: 2023 Helge Eichhorn <git@helgeeichhorn.de>
# SPDX-FileCopyrightText: 2024 Angus Morrison <github@angus-morrison.com>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "lox-space"
description = "The Lox toolbox for space mission analysis and design"
version = "0.1.0-alpha.36"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lib]
name = "lox_space"
crate-type = ["lib", "cdylib"]

[dependencies]
lox-test-utils.workspace = true
lox-analysis = { workspace = true, optional = true }
lox-bodies = { workspace = true, optional = true }
lox-comms = { workspace = true, optional = true }
lox-core = { workspace = true, optional = true }
lox-earth = { workspace = true, optional = true }
lox-ephem = { workspace = true, optional = true }
lox-frames = { workspace = true, optional = true }
lox-io = { workspace = true, optional = true }
lox-math = { workspace = true, optional = true }
lox-orbits = { workspace = true, optional = true }
lox-time = { workspace = true, optional = true, features = ["chrono"] }
lox-units = { workspace = true, optional = true }

glam = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
sgp4 = { workspace = true, optional = true }

[dev-dependencies]
divan.workspace = true
glam = { workspace = true, features = ["serde"] }
lox-test-utils.workspace = true
pyo3 = { workspace = true, features = ["auto-initialize"] }
rstest.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bench]]
name = "spk"
harness = false

[[bench]]
name = "visibility"
harness = false

[features]
default = [
  "analysis",
  "bodies",
  "comms",
  "core",
  "earth",
  "ephem",
  "frames",
  "io",
  "math",
  "orbits",
  "time",
  "units",
]
analysis = ["orbits", "dep:lox-analysis", "lox-analysis?/comms"]
bodies = ["math", "units", "dep:lox-bodies"]
comms = ["units", "dep:lox-comms"]
core = ["dep:lox-core"]
earth = ["bodies", "math", "io", "time", "units", "dep:lox-earth"]
ephem = ["math", "dep:lox-ephem"]
frames = ["bodies", "earth", "math", "time", "units", "dep:lox-frames"]
io = ["dep:lox-io"]
math = ["dep:lox-math"]
orbits = [
  "bodies",
  "core",
  "earth",
  "ephem",
  "frames",
  "math",
  "time",
  "units",
  "dep:lox-core",
  "dep:lox-orbits",
]
python = [
  "analysis",
  "comms",
  "core",
  "time",
  "units",
  "dep:glam",
  "dep:numpy",
  "dep:pyo3",
  "dep:rayon",
  "dep:sgp4",
]
time = ["io", "math", "units", "dep:lox-time"]
units = ["dep:lox-units"]
serde = [
  "lox-analysis?/serde",
  "lox-bodies?/serde",
  "lox-comms?/serde",
  "lox-core?/serde",
  "lox-ephem?/serde",
  "lox-frames?/serde",
  "lox-math?/serde",
  "lox-orbits?/serde",
  "lox-time?/serde",
  "lox-units?/serde",
]
