# SPDX-FileCopyrightText: 2023 Helge Eichhorn <git@helgeeichhorn.de>
# SPDX-FileCopyrightText: 2024 Angus Morrison <github@angus-morrison.com>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "lox-space"
description = "The Lox toolbox for space mission analysis and design"
version = "0.1.0-alpha.49"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lib]
name = "lox_space"
crate-type = ["lib"]
test = false

[dependencies]
lox-test-utils = { workspace = true, features = ["std"] }
lox-analysis = { workspace = true, optional = true, default-features = false }
lox-bodies = { workspace = true, optional = true }
lox-comms = { workspace = true, optional = true }
lox-core = { workspace = true, optional = true, features = ["std"] }
lox-earth = { workspace = true, optional = true }
lox-ephem = { workspace = true, optional = true }
lox-frames = { workspace = true, optional = true }
lox-io = { workspace = true, optional = true }
lox-itur = { workspace = true, optional = true }
lox-math = { workspace = true, optional = true }
lox-odm = { workspace = true, optional = true }
lox-orbits = { workspace = true, optional = true }
lox-time = { workspace = true, optional = true, features = ["chrono"] }
lox-units = { workspace = true, optional = true }

geo = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
sgp4 = { workspace = true, optional = true }

[dev-dependencies]
divan.workspace = true
geo.workspace = true
lox-test-utils = { workspace = true, features = ["std"] }
pyo3 = { workspace = true, features = ["auto-initialize"] }
serde.workspace = true
serde_json.workspace = true

[[bench]]
name = "spk"
harness = false

[[bench]]
name = "visibility"
harness = false

[[bench]]
name = "geometry"
harness = false

[[bench]]
name = "power"
harness = false

[[bench]]
name = "imaging"
harness = false

[features]
default = [
  "analysis",
  "bodies",
  "comms",
  "core",
  "earth",
  "itur",
  "ephem",
  "frames",
  "imaging",
  "io",
  "math",
  "odm",
  "orbits",
  "rayon",
  "time",
  "units",
]
rayon = ["lox-analysis?/rayon"]
analysis = ["orbits", "dep:lox-analysis", "lox-analysis?/comms"]
imaging = ["analysis", "dep:geo", "lox-analysis?/imaging", "lox-analysis?/geojson"]
bodies = ["math", "units", "dep:lox-bodies"]
comms = ["units", "dep:lox-comms"]
core = ["dep:lox-core"]
itur = ["comms", "dep:lox-itur"]
earth = ["bodies", "math", "io", "time", "units", "dep:lox-earth"]
ephem = ["math", "dep:lox-ephem"]
frames = ["bodies", "earth", "math", "time", "units", "dep:lox-frames"]
io = ["dep:lox-io"]
math = ["dep:lox-math"]
odm = ["orbits", "dep:lox-odm", "lox-orbits?/odm"]
orbits = [
  "bodies",
  "core",
  "earth",
  "ephem",
  "frames",
  "math",
  "time",
  "units",
  "dep:lox-core",
  "dep:lox-orbits",
]
python = [
  "analysis",
  "comms",
  "core",
  "imaging",
  "itur",
  "time",
  "units",
  "dep:numpy",
  "dep:pyo3",
  "dep:sgp4",
]
time = ["io", "math", "units", "dep:lox-time"]
units = ["dep:lox-units"]
serde = [
  "lox-analysis?/serde",
  "lox-bodies?/serde",
  "lox-comms?/serde",
  "lox-core?/serde",
  "lox-ephem?/serde",
  "lox-frames?/serde",
  "lox-math?/serde",
  "lox-orbits?/serde",
  "lox-time?/serde",
  "lox-units?/serde",
]
