[project]
name = "lox-space"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["numpy >= 1.16.0"]
dynamic = ["version"]

[dependency-groups]
dev = ["black", "ipython", "maturin", "pytest", "pytest-codspeed"]

[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module", "python"]

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "benchmark: marks tests as benchmark tests",
]

[tool.uv]
# Rebuild package when any rust files change
cache-keys = [
  { file = "pyproject.toml" },
  { file = "Cargo.toml" },
  { file = "**/*.rs" },
  { file = "../**/*.rs" },
]
