# SPDX-FileCopyrightText: 2023 Helge Eichhorn <git@helgeeichhorn.de>
#
# SPDX-License-Identifier: MPL-2.0

[project]
name = "lox-space"
description = "An astrodynamics library for orbital mechanics, mission analysis, and telecommunications"
authors = [{name = "Helge Eichhorn", email = "git@helgeeichhorn.de"}]
license = {text = "MPL-2.0"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["astrodynamics", "orbital-mechanics", "mission-analysis", "space"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = ["numpy >= 1.16.0"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/lox-space/lox"
Documentation = "https://python.lox.rs"
Repository = "https://github.com/lox-space/lox"

[dependency-groups]
dev = [
  "astropy>=6.0",
  "black",
  "ipython",
  "maturin",
  "pytest",
  "pytest-codspeed",
  "pytest-cov>=6.0.0",
  "skyfield>=1.45",
  "spacelink",
  "spiceypy>=6.0.0",
]
docs = ["mkdocs", "mkdocstrings[python]>=0.18", "mkdocs-material"]

[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["python"]

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "benchmark: marks tests as benchmark tests",
]

[tool.uv]
# Rebuild package when any rust files change
cache-keys = [
  { file = "pyproject.toml" },
  { file = "Cargo.toml" },
  { file = "**/*.pyi" },
  { file = "**/*.rs" },
  { file = "../**/*.rs" },
]
