# SPDX-FileCopyrightText: 2026 Helge Eichhorn <git@helgeeichhorn.de>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "lox-stream"
description = "Streaming primitive for parallel work backed by rayon and async-channel"
version = "0.1.0-alpha.1"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-channel.workspace = true
futures-core.workspace = true
rayon.workspace = true

[dev-dependencies]
axum.workspace = true
futures.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tower.workspace = true
