# SPDX-FileCopyrightText: 2025 Helge Eichhorn <git@helgeeichhorn.de>
# SPDX-License-Identifier: MPL-2.0

[package]
name = "lox-test-utils"
version = "0.1.0-alpha.0"
description = "Testing utilities for the Lox ecosystem"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lox-derive = { workspace = true, optional = true }
glam.workspace = true

[dev-dependencies]
divan.workspace = true

[features]
derive = ["dep:lox-derive"]

[[bench]]
name = "approx_eq"
harness = false
