# SPDX-FileCopyrightText: 2025 Helge Eichhorn <git@helgeeichhorn.de>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "lox-test-utils"
version = "0.1.0-alpha.7"
description = "Testing utilities for the Lox ecosystem"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
lox-derive = { workspace = true, optional = true }
glam.workspace = true
num-traits.workspace = true

[dev-dependencies]
divan.workspace = true

[features]
default = ["std"]
std = ["glam/std", "num-traits/std"]
libm = ["glam/libm", "num-traits/libm"]
derive = ["dep:lox-derive"]

[[bench]]
name = "approx_eq"
harness = false
