# SPDX-FileCopyrightText: 2023 Helge Eichhorn <git@helgeeichhorn.de>
# SPDX-FileCopyrightText: 2024 Angus Morrison <github@angus-morrison.com>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "lox-time"
description = "Time modelling tools for the Lox ecosystem"
version = "0.1.0-alpha.11"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lox-core.workspace = true
lox-derive.workspace = true
lox-math.workspace = true
lox-test-utils.workspace = true
lox-units.workspace = true

chrono = { workspace = true, optional = true }
itertools.workspace = true
num.workspace = true
regex.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true

[features]
chrono = ["dep:chrono"]
