# SPDX-FileCopyrightText: 2023 Helge Eichhorn <git@helgeeichhorn.de>
# SPDX-FileCopyrightText: 2024 Angus Morrison <github@angus-morrison.com>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "lox-time"
description = "Time modelling tools for the Lox ecosystem"
version = "0.1.0-alpha.24"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
lox-core = { workspace = true, default-features = false }
lox-test-utils = { workspace = true, default-features = false }

chrono = { workspace = true, optional = true }
itertools = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true

[features]
default = ["std"]
std = [
    "dep:itertools",
    "lox-core/std",
    "lox-test-utils/std",
    "serde?/std",
]
libm = ["lox-core/libm", "lox-test-utils/libm"]
chrono = ["dep:chrono", "lox-core/chrono", "std"]
serde = ["dep:serde", "lox-core/serde"]
