# SPDX-FileCopyrightText: 2025 Helge Eichhorn <git@helgeeichhorn.de>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "lox-units"
description = "Physical units for the Lox ecosystem"
version = "0.1.0-alpha.6"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
lox-core.workspace = true
serde = { workspace = true, optional = true }

[features]
serde = ["dep:serde", "lox-core/serde"]
