[package]
name = "lox-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
fast_polynomial.workspace = true
thiserror.workspace = true
nom = "7.1.3"
fast_polynomial = "0.1.0"
quick-xml = { version = "0.31.0", features = ["serde"] }
serde = { version = "1.0.194", features = ["serde_derive"] }
serde_json = "1.0.113"
error = "0.1.9"
serde-aux = "4.5.0"
regex = "1.10.4"
fast-float = "0.2.0"

[dev-dependencies]
float_eq.workspace = true
rstest.workspace = true
