[package]
name = "lox-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
fast_polynomial.workspace = true
thiserror.workspace = true
nom.workspace = true
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-aux.workspace = true
regex.workspace = true
fast-float.workspace = true
lox_derive.workspace = true

[dev-dependencies]
float_eq.workspace = true
rstest.workspace = true
