[package]
name = "lox-utils"
version = "0.1.0-alpha.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
fast_polynomial.workspace = true
float_eq.workspace = true
glam.workspace = true
pyo3 = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true

[features]
python = [
    "dep:pyo3",
]
