[package]
name = "lox_core"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "0.99.17", default-features = false, features = ["from", "deref"] }
float_eq = "1.0.1"
glam = "0.24.2"
num = "0.4.0"
thiserror.workspace = true

[dev-dependencies]
proptest = "1.1.0"
rstest = "0.18.2"
