[package]
name = "lox_core"
version = "0.1.0"
edition = "2021"

[dependencies]
float_eq.workspace = true
thiserror.workspace = true
glam = "0.25.0"
num = "0.4.1"
nom = "7.1.3"
fast_polynomial = "0.1.0"
dyn-clone = "1.0.16"
mockall = "0.12.1"

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true
divan = "0.1.11"

[[bench]]
name = "iau_frames"
harness = false

[[bench]]
name = "time_delta"
harness = false
