[package]
name = "lox_core"
version = "0.1.0"
edition = "2021"

[dependencies]
float_eq = "1.0.1"
glam = "0.24.2"
num = "0.4.0"
thiserror.workspace = true
nom = "7.1.3"
fast_polynomial = "0.1.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0.194", features = ["serde_derive"] }
serde_json = "1.0.113"
error = "0.1.9"

[dev-dependencies]
proptest = "1.1.0"
rstest = "0.18.2"
divan = "0.1.2"

[[bench]]
name = "iau_frames"
harness = false
